# InfoPush

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: settings.gradle.kts
app/app/: build.gradle.kts  proguard-rules.pro
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: changelog.json
app/app/src/main/java/com/infopush/app/: InfoPushApp.kt  MainActivity.kt
app/app/src/main/java/com/infopush/app/data/api/: ApiClient.kt  ApiService.kt
app/app/src/main/java/com/infopush/app/data/db/: AppDatabase.kt  MessageDao.kt
app/app/src/main/java/com/infopush/app/data/model/: Message.kt
app/app/src/main/java/com/infopush/app/service/: BootReceiver.kt  PushService.kt
app/app/src/main/java/com/infopush/app/util/: DeepLinkHelper.kt  MessageEventManager.kt  NotificationHelper.kt
app/app/src/main/res/drawable/: ic_launcher_foreground.xml
app/app/src/main/res/values/: strings.xml  styles.xml
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
server/: .env  .env.docker.example  .env.example  Dockerfile  docker-compose.yml  infopush.service  nginx.conf  requirements.txt  test_api.sh  test_integration.py  test_push.py  test_websocket.py
server/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  ws_manager.py
server/app/routers/: auth.py  messages.py  push.py  ws.py
(+8 files in other folders)
