[package]
name = "InfoPush"
version = "0.1.0"
description = "InfoPush Desktop Client"
authors = ["you"]
edition = "2021"

[lib]
name = "infopush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
image = { version = "0.25.10", features = ["png"] }
